--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -3,7 +3,7 @@ body {
   background-size: auto;
   background-repeat: no-repeat;
   background-size: 100% 100%;
-  color: white;
+  color:black;
 }
 
 main {
