--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -3,7 +3,7 @@
 
   <div class="row text-center">
     <div class="col">
-      <h2 class="devoured">Creat Your Burger</h2>
+      <h2 class="devoured"></h2>
       <form class="create-form">
 
         <div class="form-group list">
